[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui_panel.png" type="Texture" id=2]
[ext_resource path="res://audio/audio_wrongselection.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/ui_cursor_4x.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Cursor.gd" type="Script" id=5]
[ext_resource path="res://fonts/munro.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/InventoryBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/audio_changeselection.wav" type="AudioStream" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 46, 46 )
margin_left = 15.0
margin_right = 15.0
margin_top = 15.0
margin_bottom = 15.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 46, 46 )
margin_left = 15.0
margin_right = 15.0
margin_top = 15.0
margin_bottom = 15.0

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 46, 46 )
margin_left = 15.0
margin_right = 15.0
margin_top = 15.0
margin_bottom = 15.0
modulate_color = Color( 0.913725, 0.207843, 0.207843, 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 6 )

[node name="Inventory" type="Panel"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
draw_center = false
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_top = 0.05
anchor_right = 0.96
anchor_bottom = 0.95
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSection" type="HBoxContainer" parent="Menu"]
margin_right = 737.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BoxContainer" type="Control" parent="Menu/ItemSection"]
margin_right = 325.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Previous" parent="Menu/ItemSection/BoxContainer" instance=ExtResource( 7 )]
anchor_left = 0.25
anchor_right = 0.25
margin_left = -59.0
margin_right = 59.0
rect_pivot_offset = Vector2( 59, 59 )

[node name="Next" parent="Menu/ItemSection/BoxContainer" instance=ExtResource( 7 )]
anchor_left = 0.75
anchor_right = 0.75
margin_left = -59.0
margin_right = 59.0
rect_pivot_offset = Vector2( 59, 59 )

[node name="Current" parent="Menu/ItemSection/BoxContainer" instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_right = 59.0
rect_scale = Vector2( 1, 1 )
rect_pivot_offset = Vector2( 59, 59 )

[node name="Textbox" type="PanelContainer" parent="Menu/ItemSection"]
margin_left = 329.0
margin_right = 737.0
margin_bottom = 118.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/ItemSection/Textbox"]
margin_left = 15.0
margin_top = 47.0
margin_right = 393.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
autowrap = true

[node name="SuspectSection" type="HBoxContainer" parent="Menu"]
margin_top = 134.0
margin_right = 737.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BoxContainer" type="Control" parent="Menu/SuspectSection"]
margin_right = 325.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Previous" parent="Menu/SuspectSection/BoxContainer" instance=ExtResource( 7 )]
anchor_left = 0.25
anchor_right = 0.25
margin_left = -59.0
margin_right = 59.0
rect_pivot_offset = Vector2( 59, 59 )

[node name="Next" parent="Menu/SuspectSection/BoxContainer" instance=ExtResource( 7 )]
anchor_left = 0.75
anchor_right = 0.75
margin_left = -59.0
margin_right = 59.0
rect_pivot_offset = Vector2( 59, 59 )

[node name="Current" parent="Menu/SuspectSection/BoxContainer" instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_right = 59.0
rect_scale = Vector2( 1, 1 )
rect_pivot_offset = Vector2( 59, 59 )

[node name="Textbox" type="PanelContainer" parent="Menu/SuspectSection"]
margin_left = 329.0
margin_right = 737.0
margin_bottom = 118.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/SuspectSection/Textbox"]
margin_left = 15.0
margin_top = 47.0
margin_right = 393.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
autowrap = true

[node name="AccuseSection" type="Control" parent="Menu"]
margin_top = 268.0
margin_right = 737.0
margin_bottom = 388.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AccuseButton" type="Panel" parent="Menu/AccuseSection"]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="Menu/AccuseSection/AccuseButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccusationLabel" type="Label" parent="Menu/AccuseSection/AccuseButton/HBoxContainer"]
margin_right = 430.0
margin_bottom = 36.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
text = "Accusation goes here"
align = 1
valign = 1

[node name="AccusationCall" type="Label" parent="Menu/AccuseSection/AccuseButton/HBoxContainer"]
margin_top = 40.0
margin_right = 430.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "ACCUSE!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioWrongSelection" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="audioChangeSelection" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
